--- a/.example.env
+++ b/.example.env
@@ -3,3 +3,5 @@ REACT_APP_TWILIO_API_KEY_BE=<YOUR_TWILIO_API_KEY>
 REACT_APP_TWILIO_SID_FE=<YOUR_TWILIO_SID_FOR_AUTH_TOKEN>
 REACT_APP_TWILIO_AUTH_TOKEN_FE=<YOUR_TWILIO_AUTH_TOKEN>
 REACT_APP_TWILIO_API_URL=<YOUR_TWILIO_API_URL>
+REACT_APP_TWILIO_API_TRUNK_URL=<YOUR_TWILIO_API_TRUNK_URL>
+REACT_APP_TWILIO_TRUNK_ID=<YOUR_TWILIO_TRUNK_ID>
